classDiagram
    class User {
        <<Entity>>
        +Long id
        +String email
        +String password
        +String firstName
        +String lastName
        +String phoneNumber
        +UserRole role
        +Boolean active
        +LocalDateTime createdAt
        +LocalDateTime updatedAt
        #onCreate() void
        #onUpdate() void
    }

    class PasswordResetToken {
        <<Entity>>
        +Long id
        +String token
        +User user
        +LocalDateTime expiresAt
        +boolean used
    }

    class UserRepository {
        <<Repository>>
        +findByEmail(String) Optional~User~
        +existsByEmail(String) boolean
    }

    class PasswordResetTokenRepository {
        <<Repository>>
        +findByToken(String) Optional~PasswordResetToken~
        +deleteAllByUser(User) void
    }

    class AuthService {
        <<Service>>
        +register(RegisterRequest) AuthResponse
        +login(LoginRequest) AuthResponse
        +forgotPassword(String) void
        +resetPassword(String, String) void
        -hashToken(String) String
    }

    class UserService {
        <<Service>>
        +getCurrentUser() UserResponse
        +getUserById(Long) UserResponse
        +getAllUsers() List~UserResponse~
        +getUsersByRole(UserRole) List~UserResponse~
        +updateUserRole(Long, UserRole) UserResponse
        +updateProfile(String, String, String) UserResponse
        +changePassword(String, String) void
    }

    class NotificationClient {
        <<Service>>
        +sendPasswordReset(User, String) void
    }

    class AuthController {
        <<RestController>>
        +register() ResponseEntity
        +login() ResponseEntity
        +forgotPassword() ResponseEntity
        +resetPassword() ResponseEntity
    }

    class UserController {
        <<RestController>>
        +getCurrentUser() ResponseEntity
        +getUserById() ResponseEntity
        +getAllUsers() ResponseEntity
        +updateUserRole() ResponseEntity
        +updateProfile() ResponseEntity
        +changePassword() ResponseEntity
    }

    class JwtTokenProvider {
        <<Component>>
        +generateToken(UserDetails) String
        +generateToken(Map, UserDetails) String
        +extractUsername(String) String
        +extractClaim(String, Function) Object
        +isTokenValid(String, UserDetails) boolean
    }

    class JwtAuthenticationFilter {
        <<Component>>
        #doFilterInternal(request, response, chain) void
    }

    class SecurityConfig {
        <<Configuration>>
        +securityFilterChain(HttpSecurity) SecurityFilterChain
        +userDetailsService() UserDetailsService
        +authenticationProvider() AuthenticationProvider
        +authenticationManager() AuthenticationManager
        +passwordEncoder() PasswordEncoder
    }

    class CorsConfig {
        <<Configuration>>
        +corsConfigurationSource() CorsConfigurationSource
    }

    class EmailAlreadyExistsException {
        <<Exception>>
    }

    class GlobalExceptionHandler {
        <<RestControllerAdvice>>
        +handleEmailAlreadyExistsException() ResponseEntity
        +handleRuntimeException() ResponseEntity
        +handleBadCredentialsException() ResponseEntity
        +handleValidationExceptions() ResponseEntity
    }

    AuthController --> AuthService
    UserController --> UserService
    AuthService --> UserRepository
    AuthService --> PasswordResetTokenRepository
    AuthService --> NotificationClient
    AuthService --> JwtTokenProvider
    AuthService ..> EmailAlreadyExistsException : throws
    UserService --> UserRepository
    PasswordResetToken --> User
    UserRepository ..> User
    PasswordResetTokenRepository ..> PasswordResetToken
    JwtAuthenticationFilter --> JwtTokenProvider
    SecurityConfig --> JwtAuthenticationFilter
    SecurityConfig --> CorsConfig
    AuthController ..> GlobalExceptionHandler : throws exceptions
    UserController ..> GlobalExceptionHandler : throws exceptions
    GlobalExceptionHandler ..> EmailAlreadyExistsException : handles
